--- a/Progi_Test_Back/Progi_Test.Domain/Progi_Test.Domain.csproj
+++ b/Progi_Test_Back/Progi_Test.Domain/Progi_Test.Domain.csproj
@@ -4,11 +4,7 @@
         <TargetFramework>net7.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <RootNamespace>Progi_Test.Domain</RootNamespace>
     </PropertyGroup>
-
-    <ItemGroup>
-      <Folder Include="Entities\" />
-      <Folder Include="Enums\" />
-    </ItemGroup>
 
 </Project>
