- BackEnd basic implementation finished.

--- a/Progi_Test_Back/Progi_Test.API/Progi_Test.API.csproj
+++ b/Progi_Test_Back/Progi_Test.API/Progi_Test.API.csproj
@@ -9,6 +9,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="MediatR" Version="12.2.0" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.7"/>
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0"/>
     </ItemGroup>
@@ -17,6 +18,10 @@
       <Content Include="..\.dockerignore">
         <Link>.dockerignore</Link>
       </Content>
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Progi_Test.Application\Progi_Test.Application.csproj" />
     </ItemGroup>
 
 </Project>
