--- a/Progi_Test_Back/Progi_Test.Application/Progi_Test.Application.csproj
+++ b/Progi_Test_Back/Progi_Test.Application/Progi_Test.Application.csproj
@@ -9,11 +9,15 @@
 
     <ItemGroup>
       <Folder Include="Features\Vehicle\Commands\" />
-      <Folder Include="Interfaces\" />
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\Progi_Test.Domain\Progi_Test.Domain.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="AutoMapper" Version="13.0.1" />
+      <PackageReference Include="MediatR" Version="12.2.0" />
     </ItemGroup>
 
 </Project>
